--- a/btbwaiver/package.json
+++ b/btbwaiver/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-date-dropdown": "^1.0.5",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
