--- a/btbwaiver/.env
+++ b/btbwaiver/.env
@@ -1,4 +1,4 @@
 VUE_APP_ROOTURL1 = http://localhost:8080
-VUE_APP_DATABASE_PEOPLE = http://localhost:9090/people
-VUE_APP_DATABASE_PLAYERS = http://localhost:9090/players
-VUE_APP_DATABASE_PLAYERMINOR = http://localhost:9090/player_minors
+VUE_APP_PEOPLE = http://localhost:9090/people
+VUE_APP_PLAYERS = http://localhost:9090/players
+VUE_APP_PLAYERMINOR = http://localhost:9090/player_minors
