--- a/btbwaiver/package.json
+++ b/btbwaiver/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-date-dropdown": "^1.0.5",
+    "vue-dropdown-datepicker": "^1.3.1",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vue-signature-pad": "^2.0.0",
